<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IOP App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login Activity -->

    <string name="text_top_left">Options Unlimited Opportunities Unlimited</string>
    <string name="text_top_right_missed_call_text">Missed Call</string>
    <string name="text_top_right_message_text">Message</string>
    <string name="text_top_right_missed_call_number">1800&#8211;111&#8211;900</string>
    <string name="text_top_right_message_number">9013505050</string>
    <string name="india_on_phone_logo_heading">India On Phone Logo</string>
    <string name="login_bar_login_text">LOGIN</string>
    <string name="mobile_number_id_hint">MOBILE NUMBER - ID</string>
    <string name="password_hint">PASSWORD</string>
    <string name="forgot_password"><u>FORGOT PASSWORD</u></string>
    <string name="register_button_text">NEW USER REGISTRATION</string>

    <!-- RegisterActivity -->
    <string name="register_bar_register_text">REGISTER</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="your_name_hint_register">YOUR NAME </string>
    <string name="mobile_hint_register">MOBILE </string>
    <string name="register_submit_button">SUBMIT </string>
    <string name="icon_your_name">Icon Your Name</string>
    <string name="icon_mobile_number">Icon Mobile Number</string>
    <string name="icon_user_type">Icon User Type</string>
    <string name="icon_select_location">Icon Select Location</string>
    <string name="register_existingUser_button">Existing User Login </string>

    <string-array name="UserType">
        <item>User Type</item>
        <item>Individual</item>
        <item>Organisation</item>
    </string-array>
    <string-array name="SelectLocation">
        <item>Select Location</item>
        <item>Delhi</item>
        <item>Mumbai</item>
        <item>Banglore</item>
    </string-array>

    <!-- Dashboard Activity -->

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_section1">Dashboard</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_search_text">Search</string>
    <string name="contacts">Contacts</string>
    <string name="community">Community</string>
    <string name="group">Group</string>

    <!-- Contact ContextMenu Strings -->

    <string name="contacts_context_menu_all_contacts">All Contacts</string>
    <string name="contacts_context_menu_add_contacts">Add Contact</string>
    <string name="contacts_context_menu_create_contacts">Create Contact</string>
    <string name="contacts_context_menu_delete_contacts">Delete Contact</string>
    <string name="contacts_context_menu_all_category">All Category</string>
    <string name="contacts_context_menu_create_category">Create Category</string>
    <string name="contacts_context_menu_government_contact">Government Contacts</string>
    <string name="contacts_context_menu_media_contact">Media Contacts</string>
    <string name="contacts_context_menu_emergency_contact">Emergency Contacts</string>
    <string name="contacts_context_menu_helplines">Helplines</string>
    <string name="contacts_context_menu_message">Message</string>

    <!-- Community ContextMenu Strings -->

    <string name="community_context_all_community">All Community</string>
    <string name="community_context_my_community">My Community</string>

    <!-- Group ContextMenu Strings -->

    <string name="group_context_all_group">All Group</string>
    <string name="group_context_my_group">My Group</string>
    <string name="group_context_joined_group">Joined Group</string>
    <string name="group_context_create_group">Create Group</string>
    <string name="group_context_favourite_group">Favourite Group</string>

</resources>