<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <item
        android:id="@+id/action_view_All_Group"
        android:orderInCategory="1"
        android:title="@string/group_context_all_group"/>
    <item
        android:id="@+id/action_view_My_Group"
        android:orderInCategory="1"
        android:title="@string/group_context_my_group"/>
     <item
        android:id="@+id/action_view_Joined_Group"
        android:orderInCategory="1"
        android:title="@string/group_context_joined_group"/>
    <item
        android:id="@+id/action_view_Create_Group"
        android:orderInCategory="1"
        android:title="@string/group_context_create_group"/>
        <item
        android:id="@+id/action_view_Favourite_Group"
        android:orderInCategory="1"
        android:title="@string/group_context_favourite_group"/>
    

</menu>
