<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.softedge.iopapp.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayoutLoginUpperMarqueeTextRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtTopLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_top_left"
                android:textColor="@color/text_green" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtTopRightUpper"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_top_right_message_text"
                    android:textColor="@color/text_orange" />

                <TextView
                    android:id="@+id/txtTopRightBottom"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_top_right_message_number"
                    android:textColor="@color/text_green" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgIndiaOnPhoneLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_between_objects_10_dp"
            android:contentDescription="@string/india_on_phone_logo_heading"
            android:src="@drawable/ic_indiaonphone_logo" />

        <TextView
            android:id="@+id/txtLoginActivityLoginBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_objects_10_dp"
            android:background="@color/text_orange"
            android:gravity="center"
            android:text="@string/login_bar_login_text"
            android:textColor="@color/text_white"
            android:textSize="14pt"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/text_green" />

        <LinearLayout
            android:id="@+id/linearLayoutMobileNumberID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>

        <com.softedge.iopapp.floatingText.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edMobileNumberId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:drawableLeft="@drawable/ic_mobile_number"
                android:drawableStart="@drawable/ic_mobile_number"
                android:hint="@string/mobile_number_id_hint" />
        </com.softedge.iopapp.floatingText.FloatLabeledEditText>

        <com.softedge.iopapp.floatingText.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </com.softedge.iopapp.floatingText.FloatLabeledEditText>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_objects_10_dp"
            android:background="@color/text_green"
            android:onClick="loginMethod"
            android:text="@string/login_bar_login_text"
            android:textColor="@color/text_white"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_between_objects_10_dp"
            android:clickable="true"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_between_objects_10_dp"
            android:background="@color/text_green"
            android:text="@string/register_button_text"
            android:textColor="@color/text_white"
            android:textSize="8pt"
            android:onClick="Register_Activity_startMethod" />
    </LinearLayout>

</ScrollView>