<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.softedge.iopapp.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayoutRegisterUpperMarqueeTextRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtTopLeftRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_top_left"
                android:textColor="@color/text_green" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtTopRightUpperRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_top_right_message_text"
                    android:textColor="@color/text_orange" />

                <TextView
                    android:id="@+id/txtTopRightBottomRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_top_right_message_number"
                    android:textColor="@color/text_green" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgIndiaOnPhoneLogoRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_between_objects_10_dp"
            android:contentDescription="@string/india_on_phone_logo_heading"
            android:src="@drawable/ic_indiaonphone_logo" />

        <TextView
            android:id="@+id/txtLoginActivityRegisterBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_objects_10_dp"
            android:background="@color/text_orange"
            android:gravity="center"
            android:text="@string/register_bar_register_text"
            android:textColor="@color/text_white"
            android:textSize="14pt"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/text_green" />

        <com.softedge.iopapp.floatingText.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_mobile_number" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_name_hint_register" />
            </LinearLayout>
        </com.softedge.iopapp.floatingText.FloatLabeledEditText>

        <com.softedge.iopapp.floatingText.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_hint_register"
                    android:inputType="phone" />
            </LinearLayout>
        </com.softedge.iopapp.floatingText.FloatLabeledEditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between_objects_10_dp"
            android:layout_marginTop="@dimen/margin_between_objects_10_dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_people_outline_black_24dp" />

            <Spinner
                android:id="@+id/spinner_register_usertype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between_objects_10_dp"
            android:layout_marginTop="@dimen/margin_between_objects_10_dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_place_black_24dp" />

            <Spinner
                android:id="@+id/spinner_register_selectlocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between_objects_10_dp"
            android:layout_marginTop="@dimen/margin_between_objects_10_dp"
            android:background="@color/text_green"
            android:onClick="RegisterMethod"
            android:text="@string/register_submit_button"
            android:textColor="@color/text_white"
            android:textSize="8pt" />

        <Button
            android:id="@+id/btnExistingUserLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_objects_40_dp"
            android:background="@color/text_green"
            android:onClick="RegisterMethodExistingUser"
            android:text="@string/register_existingUser_button"
            android:textColor="@color/text_white"
            android:textSize="8pt" />
    </LinearLayout>

</ScrollView>